[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-learning-week1"
version = "0.1.0"
description = "Agent Learn - Week 1: FastAPI skeleton + LLM API"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.137",
    "uvicorn>=0.49",
    "openai>=2.0",
    "pydantic>=2.0",
]

[tool.setuptools]
packages = ["app", "app.routers", "app.schemas"]

[tool.fastapi]
entrypoint = "app.main:app"
